internal/gatewayapi/testdata/clienttrafficpolicy-invalid-settings.in.yaml
clientTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: target-gateway-1
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
      headers:
        xForwardedClientCert:
          mode: Sanitize
          certDetailsToAdd:
            - Cert
      tls:
        clientValidation:
          caCertificateRefs:
            - name: tls-secret-1
              group: ""
              namespace: default
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: target-gateway-2
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-2
      headers:
        xForwardedClientCert:
          mode: Sanitize
          certDetailsToAdd:
            - Cert
      tls:
        clientValidation:
          caCertificateRefs:
            - name: tls-cm-1
              kind: ConfigMap
              group: ""
              namespace: default
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: target-gateway-3
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-3
      headers:
        xForwardedClientCert:
          mode: Sanitize
          certDetailsToAdd:
            - Cert
      tls:
        clientValidation:
          caCertificateRefs:
            - name: tls-ctb-1
              kind: ClusterTrustBundle
              group: ""
              namespace: default
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: target-gateway-4
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: gateway-4
      headers:
        xForwardedClientCert:
          mode: Sanitize
          certDetailsToAdd:
            - Cert
      tls:
        clientValidation:
          mode: VerifyIfGiven
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: ClientTrafficPolicy
    metadata:
      namespace: default
      name: target-gateway-5
    spec:
      targetRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: gateway-5
      headers:
        xForwardedClientCert:
          mode: Sanitize
          certDetailsToAdd:
            - Cert
      tls:
        clientValidation:
          optional: true
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: http-2
          protocol: HTTP
          port: 8080
          allowedRoutes:
            namespaces:
              from: Same
        - name: tcp-1
          protocol: TLS
          port: 8443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: tcp-2
          protocol: TCP
          port: 5000
          allowedRoutes:
            namespaces:
              from: Same
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-2
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: http-2
          protocol: HTTP
          port: 8080
          allowedRoutes:
            namespaces:
              from: Same
        - name: tcp-1
          protocol: TLS
          port: 8443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: tcp-2
          protocol: TCP
          port: 5000
          allowedRoutes:
            namespaces:
              from: Same
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-3
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: http-2
          protocol: HTTP
          port: 8080
          allowedRoutes:
            namespaces:
              from: Same
        - name: tcp-1
          protocol: TLS
          port: 8443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
        - name: tcp-2
          protocol: TCP
          port: 5000
          allowedRoutes:
            namespaces:
              from: Same
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-4
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: default
      name: gateway-5
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http-1
          protocol: HTTPS
          port: 443
          allowedRoutes:
            namespaces:
              from: Same
          tls:
            mode: Terminate
            certificateRefs:
              - name: tls-secret-1
                namespace: default
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-2
    spec:
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http-1
      rules:
        - matches:
            - path:
                value: "/route-2"
          backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-3
    spec:
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: http-2
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
tcpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      name: tcp-route-1
      namespace: default
    spec:
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: tcp-1
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1
    kind: TCPRoute
    metadata:
      name: tcp-route-1
      namespace: default
    spec:
      parentRefs:
        - namespace: default
          name: gateway-1
          sectionName: tcp-2
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
services:
  - apiVersion: v1
    kind: Service
    metadata:
      namespace: envoy-gateway
      name: service-1
    spec:
      selector:
        app: service-1
      ports:
        - name: http
          protocol: TCP
          port: 8080
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      namespace: default
      name: tls-secret-1
    type: kubernetes.io/tls
    data:
      invalid-ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURPekNDQWlPZ0F3SUJBZ0lVYzQxa3BFOXdLK05IZ1JHdkJJZ3c4U0Nhei84d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5EQXhNall5TXpFMU16RmFGdzB5TlRBeE1qVXlNekUxTXpGYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURDTGhaNURuQ1ZFNUpKOTd5T29jcFJ3Y2xibDBVd1gzY0krMVpaTmx0bApXNmpSZ3 [...]
      tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQ3N0SDg4dVdtVmJUSTkKTlZHemc1SlVrZFp0dWRpclFOci81SHpqYU9lbmVBVDVZSTFNRmtGVEVVcTFOWU84VHBGYittL3h0N1o1Z0Y2VwpIK2xVZGZOdG96czZmdFFodkhvaFJ5WERuNmxvbU52THVxa1ZuaVQxWHMxN2dKZG9NYW00anVpcmVxWjYrSXFvClU0Ui9yNDFyRmphUWlGNUpkYTdtRjU4VmYrQWZBcW5FU011aG9TYzUyUmVNT0t3T2czaFVYM2NyZFlMcHBIZTUKemxGMS91R045cE1DeFJEdHhySUVQTG9tUXdYTGp5dlJlQmcrZHJlbHpkRHBIdWVlTVNMMVZxSUV1VnZjVDBmNgpqWFFXUndtVzhEW [...]
      tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR6akNDQXJhZ0F3SUJBZ0lVT0dKOUx1VGtKWkU0NmNVaUpGYmJ2bm10elFvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2J6RUxNQWtHQTFVRUJoTUNWVk14Q3pBSkJnTlZCQWdNQWxaQk1SRXdEd1lEVlFRSERBaFRiMjFsUTJsMAplVEVUTUJFR0ExVUVDZ3dLUlc1MmIzbFFjbTk0ZVRFUU1BNEdBMVVFQ3d3SFIyRjBaWGRoZVRFWk1CY0dBMVVFCkF3d1FiWFJzY3k1bGVHRnRjR3hsTG1OdmJUQWdGdzB5TkRBM01UWXlNalV4TWpOYUdBOHlNVEkwTURZeU1qSXkKTlRFeU0xb3diekVMTUFrR0ExVUVCaE1DVlZNeEN6QUpCZ05WQkFnTUFsWkJNUkV3RHdZRFZRUUhEQWhUYjIxbApRMmwwZVRFVE1CR [...]
